# ai-usage

./: .env.example  .gitignore  LICENSE  README.md  RELEASE.md  SECURITY.md  SECURITY_REVIEW.md  package-lock.json  package.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
scripts/: generate-tray-icon.sh
src/: App.tsx  index.css  types.ts  utils.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: debug_antigravity.rs  debug_codex.rs  debug_cursor.rs  fetch_usage.rs
src-tauri/src/: config.rs  keychain.rs  lib.rs  types.rs
src-tauri/src/providers/: antigravity.rs  claude.rs  codex.rs  cursor.rs  mod.rs
src/components/: AccountCard.tsx
